--- a/CBA-Bonn-HO_2019-04-28a_jlg/slides.tex
+++ b/CBA-Bonn-HO_2019-04-28a_jlg/slides.tex
@@ -1,4 +1,4 @@
-%%-------------------------------------------------------------------------------------------------
+x%%-------------------------------------------------------------------------------------------------
 %%                           Template Notes:
 %% Make sure to have all template files from klmweb/revisions/templates/JJH_Beamer before using
 %% this file. Also please read the Beamer Reference document for typists if you have any questions
@@ -64,7 +64,7 @@
 
 % ------------ Title, author, date (ALWAYS UPDATE THESE THINGS) -----------------------------------
 
-\def \thetitle {\large Quantifying the Life-cycle Benefits \\ of an Influential Early Childhood Program} % Full title goes here
+\def \thetitle {\large Quantifying the Multifaceted and Gender-Specific \\ Life-cycle Benefits \\ of an Influential Early Childhood Program} % Full title goes here
 
 \def \theshorttitle {Quantifying the Life-cycle Benefits of an Early Childhood Program} %Short title goes here
 
