--- a/abc_comprehensivecba_revised.tex
+++ b/abc_comprehensivecba_revised.tex
@@ -1,6 +1,5 @@
 %Input preamble
 \input{preamble}
-\input{output/mainstatistics}
 
 %\interfootnotelinepenalty=10000
 
@@ -30,14 +29,12 @@
 \newgeometry{top=.8in, bottom=.8in, left=.8in, right=.8in}
 
 
-\title{\Large \textbf{Quantifying the Life-cycle \\ Benefits of an Influential Early Childhood Program}\thanks{This research was supported in part by grants from the Robert Wood Johnson Foundation's Policies for Action program, NICHD R37HD065072, the American Bar Foundation, the Buffett Early Childhood Fund, the Pritzker Children's Initiative, NICHD R01HD054702, NIA R01AG042390, and by the National Institute On Aging of the National Institutes of Health under Award Number P30AG024968. The views expressed in this paper are solely those of the authors and do not necessarily represent those of the funders or the official views of the National Institutes of Health. The authors wish to thank Frances Campbell, Craig and Sharon Ramey, Margaret Burchinal, Carrie Bynum, and the staff of the Frank Porter Graham Child Development Institute at the University of North Carolina Chapel Hill for the use of data and source materials from the Carolina Abecedarian Project and the Carolina Approach to Responsive Education. Years of partnership and collaboration have made this work possible. Andr\'{e}s Hojman, Yu Kyung Koh, Sylvi Kuperman, Stefano Mosso, Rodrigo Pinto, Joshua Shea, Jake Torcasso, and Anna Ziff contributed to analysis related to this paper. We thank Bryan Tysinger of the Leonard D. Schaeffer Center for Health Policy and Economics at the University of Southern California for help adapting the Future Adult Model to make the health projections used in this paper. For very helpful comments on various versions of the paper, we thank the editor, Harald Uhlig, and four anonymous referees, St\'{e}phane Bonhomme, Neal Cholli, Fl\'{a}vio Cunha, Steven Durlauf, David Figlio, Dana Goldman, Ganesh Karapakula, Magne Mogstad, Sidharth Moktan, Tanya Rajan, Azeem Shaikh, Jeffrey Smith, Chris Taber, Matthew Tauzer, Evan Taylor, Ed Vytlacil, Jim Walker, Chris Walters, and Matt Wiswall. We benefited from helpful comments received at the Leonard D. Schaeffer Center for Health Policy and Economics in December, 2016, and at the University of Wisconsin, February, 2017. We thank Peg Burchinal, Carrie Bynum, Frances Campbell, and Elizabeth Gunn for information on the implementation of the Carolina Abecedarian Project and the Carolina Approach to Responsive Education and assistance in data acquisition. For information on childcare in North Carolina, we thank Richard Clifford and Sue Russell. The set of codes to replicate the computations in this paper are posted in a repository. Interested parties can request to download all the files. The address of the repository is \url{https://github.com/jorgelgarcia/abccare-cba}. To replicate the results in this paper, contact the first author, who will put you in contact with the appropriate individuals to obtain access to restricted data. The Appendix for this paper is posted on \url{http://cehd.uchicago.edu/ABC_CARE}.}}
+\title{\Large \textbf{Quantifying the Life-cycle \\ Benefits of an Influential Early Childhood Program}\thanks{This research was supported in part by grants from the Robert Wood Johnson Foundation's Policies for Action program, NICHD R37HD065072, the American Bar Foundation, the Buffett Early Childhood Fund, the Pritzker Children's Initiative, NICHD R01HD054702, NIA R01AG042390, and by the National Institute On Aging of the National Institutes of Health under Award Number P30AG024968. The views expressed in this paper are solely those of the authors and do not necessarily represent those of the funders or the official views of the National Institutes of Health. The authors wish to thank Frances Campbell, Craig and Sharon Ramey, Margaret Burchinal, Carrie Bynum, and the staff of the Frank Porter Graham Child Development Institute at the University of North Carolina Chapel Hill for the use of data and source materials from the Carolina Abecedarian Project and the Carolina Approach to Responsive Education. Years of partnership and collaboration have made this work possible. We thank Bryan Tysinger of the Leonard D. Schaeffer Center for Health Policy and Economics at the University of Southern California for help adapting the Future Adult Model to make the health projections used in this paper. We also thank Andr\'{e}s Hojman, Yu Kyung Koh, Sylvi Kuperman, Stefano Mosso, Rodrigo Pinto, Joshua Shea, Jake Torcasso, and Anna Ziff for help on work related to this paper. For very helpful comments on various versions of the paper, we thank the editor, Harald Uhlig, and four anonymous referees, St\'{e}phane Bonhomme, Neil Cholli, Fl\'{a}vio Cunha, Steven Durlauf, David Figlio, Dana Goldman, Ganesh Karapakula, Magne Mogstad, Sidharth Moktan, Tanya Rajan, Azeem Shaikh, Jeffrey Smith, Chris Taber, Matthew Tauzer, Evan Taylor, Ed Vytlacil, Jim Walker, Chris Walters, and Matt Wiswall. We benefited from helpful comments received at the Leonard D. Schaeffer Center for Health Policy and Economics in December, 2016, and at the University of Wisconsin, February, 2017. We thank Peg Burchinal, Carrie Bynum, Frances Campbell, and Elizabeth Gunn for information on the implementation of the Carolina Abecedarian Project and the Carolina Approach to Responsive Education and assistance in data acquisition. For information on childcare in North Carolina, we thank Richard Clifford and Sue Russell. The set of codes to replicate the computations in this paper are posted in a repository. Interested parties can request to download all the files. The address of the repository is \url{https://github.com/jorgelgarcia/abccare-cba}. To replicate the results in this paper, contact the first author, who will put you in contact with the appropriate individuals to obtain access to restricted data. The Appendix for this paper is posted on \url{http://cehd.uchicago.edu/ABC_CARE}.}}
 
 \author{
 Jorge Luis Garc\'{i}a\\
 John E. Walker  Department of Economics\\
-Clemson University \\
-Social Science Research Institute \\
-Duke University \\  \and
+Clemson University \and
 James J. Heckman \\
 American Bar Foundation \\
 Center for the Economics \\
@@ -49,7 +46,7 @@ University of Southern California \and
 Mar\'{i}a Jos\'{e} Prados \\
 Dornsife Center for \\ Economic and Social Research\\
 University of Southern California}
-\date{First Draft: January 5, 2016\\ This Draft: February 5, 2019}
+\date{First Draft: January 5, 2016\\ This Draft: \today}
 
 \maketitle
 \thispagestyle{empty}
@@ -155,7 +152,7 @@ Randomization identifies this parameter in the experimental sample.
 \begin{equation}
 \bm{Y}^d_{k,a} = \bm{\phi}^d_{k,a} (\bm{X}^d_{k,a}, \bm{B}_k) \ + \ \bm{\varepsilon}^d_{k,a},  \label{eq:outcome} \\
 \end{equation}
-$d \in\{0,1\},  k\in\{e,n\}, a\in\{1,\dots,\bar{A}\}$ where $\bm{\phi}^d_{k,a}\left( \cdot, \cdot \right)$ is a vector of structural production relationships mapping inputs $\bm{X}^d_{k,a}, \bm{B}_k$ into outputs holding the error term $\bm{\varepsilon}^d_{k,a}$ fixed.\footnote{Fixing and conditioning are fundamentally different concepts. See \cite{Haavelmo_1943_Econometrica} and \citet{Heckman_Pinto_2015_EconometReviews} for discussions. The ``do'' operator in \citet{Pearl_2009_BOOKcausality} is an example of fixing.}$^{\text{,}}$\footnote{If feasible, cross-equation restrictions on Equation~\eqref{eq:outcome} should be tested, and, if satisfied, imposed.} $\bm{B}_k$ are baseline variables not affected by treatment. $\bm{X}^d_{k,a}$ are variables potentially affected by treatment. $\bar{A}$ is the oldest age through which benefits are projected. In the experiment we analyze, participants are observed through age $a^*< \bar{A}$.
+$d \in\{0,1\},  k\in\{e,n\}, a\in\{1,\dots,\bar{A}\}$ where $\bm{\phi}^d_{k,a}\left( \cdot, \cdot \right)$ is a vector of structural production relationships mapping inputs $\bm{X}^d_{k,a}, \bm{B}_k$ into outputs holding the error term $\bm{\varepsilon}^d_{k,a}$ fixed.\footnote{Fixing and conditioning are fundamentally different concepts. See \cite{Haavelmo_1943_Econometrica} and \citet{Heckman_Pinto_2015_EconometReviews} for discussions. The ``do'' operator in \citet{Pearl_2009_BOOKcausality} is an example of fixing.}$^{\text{,}}$\footnote{If feasible, cross-equation restrictions on Equation~\eqref{eq:outcome} should be tested, and, if satisfied, imposed.} $\bm{B}_k$ are baseline variables not affected by treatment. $\bm{X}^d_{k,a}$ are variables potentially affected by treatment.\footnote{Using the \citet{Quandt_1972_JASA} switching regression notation, we can write outputs and inputs generated by treatment as $\bm{Y}_{k,a} = \left( 1 - D \right) \bm{Y}^0_{k,a} +  \left( D \right) \bm{Y}^1_{k,a}$ and $\bm{X}_{k,a} = \left( 1 - D \right) \bm{X}^0_{k,a} +  \left( D \right) \bm{X}^1_{k,a}$.} $\bar{A}$ is the oldest age through which benefits are projected. In the experiment we analyze, participants are observed through age $a^*< \bar{A}$.
 
 The relationship between the inputs $\bm{X}^d_{k,a}, \bm{B}_k$ and outputs $\bm{Y}^d_{k,a}$ can, in principle, differ between experimental and non-experimental samples although in our data this is not the case. Equation~\eqref{eq:outcome} characterizes the outcomes of the two treatment regimes in any sample, including a non-experimental sample with no direct empirical counterpart for the case $d = 1$. We present conditions for identifying and estimating $\bm{\phi}^d_{k,a}\left( \cdot, \cdot \right)$ in non-experimental samples. A crucial condition is that for fixed values of inputs $\bm{X}^d_{k,a} = \bm{x}, \bm{B}_k = \bm{b}$ there are no differences in the technologies and in the distributions of $\bm{\varepsilon}_{k,a}^d$ across treatment regimes and samples. We first formalize this assumption and then remark on its content.
 
